--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ charset="UTF-8" />
 
 <body>
   <nav id="desktop-nav">
-    <div class="logo">vaisnavi kokare</div> <!-- Edit your name here -->
+    <div class="logo">vaishnavi kokare</div> <!-- Edit your name here -->
     <div>
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
@@ -25,7 +25,7 @@ charset="UTF-8" />
     </div>
   </nav>
   <nav id="hamburger-nav">
-    <div class="logo">vaisnavi kokare</div> <!-- Edit your name here -->
+    <div class="logo">vaishnavi kokare</div> <!-- Edit your name here -->
     <div class="hamburger-menu">
       <div class="hamburger-icon" onclick="toggleMenu()">
         <span></span>
@@ -46,7 +46,7 @@ charset="UTF-8" />
     </div>
     <div class="section__text">
       <p class="section__text__p1">Hello, I'm</p>
-      <h1 class="title">vaisnavi kokare</h1> <!-- Edit your name here -->
+      <h1 class="title">vaishnavi kokare</h1> <!-- Edit your name here -->
       <p class="section__text__p2">Frontend Developer</p> <!-- Edit your profession/title here -->
       <div class="btn-container">
         <button class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')"> <!-- Link to your resume PDF -->
@@ -60,7 +60,7 @@ charset="UTF-8" />
         <img src="./assets/linkedin.png" alt="My LinkedIn profile" class="icon"
           onclick="location.href='https:https://www.linkedin.com/in/vaishnavi-kokare-a3aa9a260?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app'" /> <!-- Edit your LinkedIn URL -->
         <img src="./assets/github.png" alt="My Github profile" class="icon"
-          onclick="location.href='https://github.com/vaisnavi776'" /> <!-- Edit your GitHub URL -->
+          onclick="location.href='https://github.com/vaishnavi776'" /> <!-- Edit your GitHub URL -->
       </div>
     </div>
   </section>
@@ -141,7 +141,7 @@ charset="UTF-8" />
           <h2 class="experience-sub-title project-title">Project One</h2> <!-- Edit your project title -->
         </div>
         <div class="btn-container">
-          <button class="btn btn-color-2 project-btn" onClick="location.href='https://github.com/vaisnavi776'"> <!-- Edit your project's GitHub URL -->
+          <button class="btn btn-color-2 project-btn" onClick="location.href='https://github.com/vaishnavi776'"> <!-- Edit your project's GitHub URL -->
             Github
           </button>
           <button class="btn btn-color-2 project-btn" onClick="location.href='https://www.google.com'"> <!-- Edit your project's live demo URL -->
@@ -158,7 +158,7 @@ charset="UTF-8" />
     <div class="contact-info-upper-container">
       <div class="contact-info-container">
         <img src="./assets/email.png" alt="Email Icon" class="icon contact-icon email-icon" />
-        <p><a href="mailto:vaisnavikokare15@gmail.com">vaisnavi kokare</a></p> <!-- Edit your email address -->
+        <p><a href="mailto:vaishnavikokare15@gmail.com">vaishnavi kokare</a></p> <!-- Edit your email address -->
       </div>
       <div class="contact-info-container">
         <img src="./assets/linkedin.png" alt="LinkedIn Icon" class="icon contact-icon" />
@@ -166,7 +166,7 @@ charset="UTF-8" />
       </div>
       <div class="contact-info-container">
         <img src="./assets/github.png" alt="Github Icon" class="icon contact-icon" />
-        <p><a href="https://github.com/vaisnavi776">vaisnavi kokare</a></p> <!-- Edit your GitHub URL -->
+        <p><a href="https://github.com/vaishnavi776">vaishnavi kokare</a></p> <!-- Edit your GitHub URL -->
       </div>
     </div>
   </section>
@@ -181,7 +181,7 @@ charset="UTF-8" />
         </ul>
       </div>
     </nav>
-    <p>Copyright &#169; 2023 vaisnavi kokare. All Rights Reserved.</p> <!-- Edit your name and copyright year -->
+    <p>Copyright &#169; 2023 vaishnavi kokare. All Rights Reserved.</p> <!-- Edit your name and copyright year -->
   </footer>
   <script src="script.js"></script> <!-- Link to your JavaScript file -->
 </body>
